--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -796,15 +796,16 @@ h5,
     }
 }
 
-//SERVICES
-.services-section {
+//STATS
+.stats-section {
     padding: 0;
 }
 
-.services {
+.stats {
     @include transition(0.3s);
 
-    padding: 80px 25px;
+    padding: 25px;
+    width: 100%;
 
     @include media-breakpoint-down(md) {
         padding: 10px 0;
@@ -852,6 +853,11 @@ h5,
         h3 {
             font-size: 28px;
             font-weight: 400;
+            letter-spacing: 3px;
+        }
+
+        p {
+            margin: 0;
         }
     }
 
