add photo 1 section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -821,8 +821,11 @@ h5,
             }
 
             .icon {
+                height: 100px;
+
                 span {
                     color: $white;
+                    height: 100%;
                 }
             }
         }
