--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2099,6 +2099,10 @@ textarea.form-control {
     stroke-linecap: round;
 }
 
+#music p {
+    color: black;
+}
+
 @keyframes loader-rotate {
     100% {
         transform: rotate(360deg);
